master: Agregado de los id de la matriz

--- a/index.html
+++ b/index.html
@@ -5,52 +5,53 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/style.css">
-        <title>Document</title>
+        <title>Wordle</title>
     </head>
     <body>
         <form action="">
             <fieldset>
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
+                <input type="text" name="" id="r0c0">
+                <input type="text" name="" id="r0c1">
+                <input type="text" name="" id="r0c2">
+                <input type="text" name="" id="r0c3">
+                <input type="text" name="" id="r0c4">
             </fieldset>
             <fieldset>
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
+                <input type="text" name="" id="r1c0">
+                <input type="text" name="" id="r1c1">
+                <input type="text" name="" id="r1c2">
+                <input type="text" name="" id="r1c3">
+                <input type="text" name="" id="r1c4">
             </fieldset>
             <fieldset>
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
+                <input type="text" name="" id="r2c0">
+                <input type="text" name="" id="r2c1">
+                <input type="text" name="" id="r2c2">
+                <input type="text" name="" id="r2c3">
+                <input type="text" name="" id="r2c4">
             </fieldset>
             <fieldset>
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
+                <input type="text" name="" id="r3c0">
+                <input type="text" name="" id="r3c1">
+                <input type="text" name="" id="r3c2">
+                <input type="text" name="" id="r3c3">
+                <input type="text" name="" id="r3c4">
             </fieldset>
             <fieldset>
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
+                <input type="text" name="" id="r4c0">
+                <input type="text" name="" id="r4c1">
+                <input type="text" name="" id="r4c2">
+                <input type="text" name="" id="r4c3">
+                <input type="text" name="" id="r4c4">
             </fieldset>
             <fieldset>
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
-                <input type="text" name="" id="">
+                <input type="text" name="" id="r5c0">
+                <input type="text" name="" id="r5c1">
+                <input type="text" name="" id="r5c2">
+                <input type="text" name="" id="r5c3">
+                <input type="text" name="" id="r5c4">
             </fieldset>
         </form>
     </body>
+    <script src="app.js"></script>
 </html>
